# quickfact-fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: models.py  schemas.py
app/pages/: route.py
app/pages/auth/challenge/: route.py
app/pages/auth/token/: route.py
app/shared/clients/: redis_client.py
app/shared/protection/: secure_request.py  utils.py
app/shared/security/: secure_request.py
db/: .sqlite3
